# KeyDetector

./: .gitignore  CMakeLists.txt  conanfile.txt
src/: Playback.cpp  Playback.h  PortAudio.cpp  PortAudio.h  common.h  main.cpp
